--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../Assets/icono.png" type="image/x-icon">
     <title>Jardines Eternos</title>
@@ -92,7 +93,7 @@
             </div>
         </section>
         <section class="acordeon-main">
-            <img src="../Assets/img-faq.jpg" alt="">
+            <img data-aos="zoom-out-right" src="../Assets/img-faq.jpg" alt="Imagen de kokedamas/terrarios">
             <div class="acordeon" id="acordeonPreguntasFrecuentes">
                 <div class="item-acordeon">
                   <h2 class="encabezado-acordeon" id="encabezadoPago">
@@ -176,5 +177,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
