--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../Assets/icono.png" type="image/x-icon">
     <title>Jardines Eternos</title>
@@ -51,7 +52,7 @@
         </nav>
       </header>
     <main>
-        <div class="container-regis">
+        <div class="container-regis" data-aos="zoom-out">
             <div class="form-area-regis">
                 <p class="titulo-regis-1">Registro</p>
                 <form action="">
@@ -97,5 +98,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
