Agregado de banners y Eliminacion del carrito

--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -43,7 +43,7 @@
             </div>
         
             <div class="carrito">
-              <a href="../pages/carrito.html"><img src="../Assets/carrito.png" alt="carrito de compras"></a>
+              <a href="#"><img src="../Assets/carrito.png" alt="carrito de compras"></a>
           </div>
           <div class="carrito">
             <a href="../pages/iniciosesion.html"><img src="../Assets/iniciosesion.png" alt="iniciosesion"></a>
@@ -69,11 +69,12 @@
                         <input placeholder="Enter your password" id="password" class="regis_style" type="password">
                     </div>
                     <div>
-                        <button class="boton-regis">Registrarse</button>
-                        <p class="text-iniciosesion">Ya tienes una cuenta? <a class="link-iniciosesion" href="">Inicia Sesión!</a></p><a class="link" href="">
-                    </a></div><a class="link-iniciosesion" href="">
-            </a></form></div><a class="link-iniciosesion" href="">
-        </a></div>
+                        <button class="boton-regis" type="submit">Registrarse</button>
+                        <p class="text-iniciosesion">Ya tienes una cuenta? <a class="link-iniciosesion" href="#">Inicia Sesión!</a></p>
+                    </div>
+                  </form>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="pie-pagina-1">
