--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         
             <div class="carrito">
-              <a href="./pages/carrito.html"><img src="./Assets/carrito.png" alt="carrito de compras"></a>
+              <a href="#"><img src="./Assets/carrito.png" alt="carrito de compras"></a>
           </div>
           <div class="carrito">
             <a href="./pages/iniciosesion.html"><img src="./Assets/iniciosesion.png" alt="iniciosesion"></a>
@@ -167,7 +167,7 @@
               </div>
         </section>
         <div>
-            <a href="https://wa.me/2617039848" target="_blank" class="whatsapp-icon">
+            <a href="https://wa.me/2617039848" target="_blank" rel="noopener" class="whatsapp-icon">
                 <img src="./Assets/wsp-icon.png" alt="WhatsApp">
             </a>
         </div>
