--- a/pages/extras.html
+++ b/pages/extras.html
@@ -42,7 +42,7 @@
             </div>
         
             <div class="carrito">
-              <a href="../pages/carrito.html"><img src="../Assets/carrito.png" alt="carrito de compras"></a>
+              <a href="#"><img src="../Assets/carrito.png" alt="carrito de compras"></a>
           </div>
           <div class="carrito">
             <a href="../pages/iniciosesion.html"><img src="../Assets/iniciosesion.png" alt="iniciosesion"></a>
@@ -51,6 +51,9 @@
         </nav>
       </header>
     <main>
+        <div class="banner-extras">
+          <img src="../Assets/banner-extras.jpg" alt="Banner de kit de jardineria">
+        </div>
         <section>
             <div class="main-container">
                 <div class="container">
@@ -79,15 +82,10 @@
                         <button class="add-to-cart-btn">Agregar al carrito</button>
                     </div>
                 </div>
-                <div class="cart">
-                    <h2>Carrito de Compras</h2>
-                    <ul id="cartItems"></ul>
-                    <p>Total: $<span id="cartTotal">0.00</span></p>
-                </div>
             </div>
         </section>
         <div>
-            <a href="https://wa.me/2617039848" target="_blank" class="whatsapp-icon">
+            <a href="https://wa.me/2617039848" target="_blank" rel="noopener" class="whatsapp-icon">
                 <img src="../Assets/wsp-icon.png" alt="WhatsApp">
             </a>
         </div>
