Arreglo en los mediaqueries, final del proyecto

--- a/pages/extras.html
+++ b/pages/extras.html
@@ -81,6 +81,12 @@
                         <p class="product-price">$17000</p>
                         <button class="add-to-cart-btn">Agregar al carrito</button>
                     </div>
+                    <div class="product-card">
+                      <img class="product-image" src="../Assets/kit-extras.png" alt="Kit de Jardineria">
+                      <h2 class="product-name">Kit de Jardineria</h2>
+                      <p class="product-price">$20000</p>
+                      <button class="add-to-cart-btn">Agregar al carrito</button>
+                  </div>
                 </div>
             </div>
         </section>
