--- a/pages/kokedamas.html
+++ b/pages/kokedamas.html
@@ -81,6 +81,12 @@
                         <p class="product-price">$20000</p>
                         <button class="add-to-cart-btn">Agregar al carrito</button>
                     </div>
+                    <div class="product-card">
+                      <img class="product-image" src="../Assets/kokedama-anturio.jpg" alt="Kokedama de Anturio">
+                      <h2 class="product-name">Kokedama de Anturio</h2>
+                      <p class="product-price">$15000</p>
+                      <button class="add-to-cart-btn">Agregar al carrito</button>
+                  </div>
                 </div>
               </div>
         </section>
