--- a/pages/terrarios.html
+++ b/pages/terrarios.html
@@ -81,6 +81,12 @@
                         <p class="product-price">$30000</p>
                         <button class="add-to-cart-btn">Agregar al carrito</button>
                     </div>
+                    <div class="product-card">
+                      <img class="product-image" src="../Assets/terrario-tropical.jfif" alt="Terrario Tropical">
+                      <h2 class="product-name">Terrario Tropical</h2>
+                      <p class="product-price">$23000</p>
+                      <button class="add-to-cart-btn">Agregar al carrito</button>
+                  </div>
                 </div>
               </div>
         </section>
