Fin del Proyecto

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             </div>
         </section>
         <div class="boton-ver-mas">
-            <button onclick="window.location.href='http://127.0.0.1:5500/pages/terrarios.html'">Ver Terrarios</button>
-            <button onclick="window.location.href='http://127.0.0.1:5500/pages/kokedamas.html'">Ver Kokedamas</button>
+            <button onclick="window.location.href='./pages/terrarios.html'">Ver Terrarios</button>
+            <button onclick="window.location.href='./pages/kokedamas.html'">Ver Kokedamas</button>
         </div>
         <section class="nosotros-index-main2">
             <div class="nosotros-index-main1" data-aos="flip-up">
@@ -104,7 +104,7 @@
                 <div class="nosotros-index">
                     <img src="./Assets/nosotros-index.jfif" alt="Foto de jazmin">
                     <p>Somos un pequeño grupo de personas que nos apasiona la naturaleza y el cultivo de diversas plantas y flores en kokedamas y en terrarios dando iniciativa a la vida dentro de un recipiente cerrado.</p>
-                    <button onclick="window.location.href='http://127.0.0.1:5500/pages/nosotros.html'">Seguir leyendo</button>
+                    <button onclick="window.location.href='./pages/nosotros.html'">Seguir Leyendo</button>
                 </div>
             </div>
         </section>
@@ -143,7 +143,7 @@
             </div>
         </section>
         <div class="boton-ver-mas" data-aos="zoom-out-up">
-            <button onclick="window.location.href='http://127.0.0.1:5500/pages/extras.html'">Ver Mas</button>
+            <button onclick="window.location.href='./pages/extras.html'">Ver Más</button>
         </div>
         <section>
             <div class="seccion-beneficios" data-aos="zoom-out">
